fix paginator overflow

--- a/src/app/reader/reader.component.css
+++ b/src/app/reader/reader.component.css
@@ -2,7 +2,6 @@
   display: flexbox;
   justify-content: center;
   position: relative;
-  overflow: hidden;
 }
 
 .form-field {
